# ZK-KYC

./: README.md
ProofMe/frontend/zk_kyc_site/: package-lock.json  package.json  tsconfig.json
ProofMe/frontend/zk_kyc_site/src/: App.jsx
ProofMe/frontend/zk_kyc_site/src/components/: Card.jsx  Card.tsx  ConnectWallet.jsx  ConnectWallet.tsx
ProofMe/frontend/zk_kyc_site/src/types/: global.d.ts
ProofMe/proofsystems/elf/: riscv32im-succinct-zkvm-elf
ProofMe/proofsystems/lib/: Cargo.toml
ProofMe/proofsystems/lib/src/: lib.rs
ProofMe/proofsystems/program/: Cargo.toml
ProofMe/proofsystems/program/src/: main.rs
ProofMe/proofsystems/script/: Cargo.toml
zkkyc/: README.md
zkkyc/frontend/zk_kyc_site/src/components/: Card.jsx
zkkyc/lib/src/: lib.rs
zkkyc/proofsystems/: .env.example  .gitignore
zkkyc/proofsystems/elf/: riscv32im-succinct-zkvm-elf  zk_kyc
zkkyc/proofsystems/lib/: Cargo.toml
zkkyc/proofsystems/lib/src/: lib.rs
zkkyc/proofsystems/program/: Cargo.toml
zkkyc/proofsystems/program/src/: main.rs
zkkyc/proofsystems/script/: Cargo.toml
