[package]
version = "0.1.0"
name = "zk_kyc-script"
edition = "2021"
default-run = "zk_kyc"

[[bin]]
name = "zk_kyc"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[dependencies]
lib = { path = "../lib", package = "zk_kyc_lib" }
chrono = { version = "0.4.39", features = ["serde"] }
bincode = "1.3"
sp1-sdk = "4.1.1"
dotenv = "0.15.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.41"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
[build-dependencies]
sp1-helper = "4.1.1"
